--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,32 @@
   text-align: center;
 }
 
-.App-logo {
+.App h1 {
+  margin: 20px;
+}
+
+.rectangle {
+  width: 200px;
+  height: 100px;
+  background-color: #00ff00;
+  border-radius: 5px;
+  margin: 50px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.excalidraw-wrapper {
+  height: 80vh;
+  width: 100%;
+  margin: 20px auto;
+}
+
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
